# GPU_Roofline_Tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  amd_mi300x_benchmark.cpp
cmake/: ExternalLibs.cmake  RocmSettings.cmake
include/GPU_Roofline_Tools/kernel/rocm/: add.hip.h  add.hpp  fma.hip.h  mul.hip.h  wmma.hip.h
include/GPU_Roofline_Tools/launcher/: benchmark_launcher.hpp
include/GPU_Roofline_Tools/launcher/rocm/: hipblaslt_launch.hip.h  kernel_device_init.hip.h  kernel_launch.hip.h  kernel_launch_vector.hip.h  kernel_launch_wmma.hip.h  rocblas_launch.hip.h
include/GPU_Roofline_Tools/utils/common/: blaslib.h  global.h  metrics.h  optype.h  ptype.h
include/GPU_Roofline_Tools/utils/cuda/: cudacheck.cuh  cudainfo.cuh
include/GPU_Roofline_Tools/utils/rocm/: hipcheck.hip.h  hipinfo.hip.h
monitors/scripts/: amd_mi300x_power_clock_temp.sh
profiler/counters/: rocprofv2_gfx942
profiler/metrics/: m_wmma_fp16-fp32.metrics  roofline.metrics  v_fma3_fp32.metrics
profiler/scripts/: runprof_m_blas_bf16-bf16-fp32.sh  runprof_m_blas_bf16-fp32-fp32.sh  runprof_m_blas_fp16-fp16-fp16.sh  runprof_m_blas_fp16-fp16-fp32.sh  runprof_m_blas_fp16-fp32-fp32.sh  runprof_m_blas_fp32-fp32-fp32.sh  runprof_m_blas_fp64-fp64-fp64.sh  runprof_m_blas_int8-int32-int32.sh  runprof_m_wmma_fp16-fp32.sh  runprof_m_wmma_fp32-fp32.sh  runprof_v_fma3_fp32.sh
runs/batch/: amd_mi300x_bench_128.sh  amd_mi300x_bench_16.sh  amd_mi300x_bench_32.sh  amd_mi300x_bench_64.sh  batch_run.sh  batch_run2.sh  batch_run_blas_fp.sh  batch_run_blas_lp.sh  batch_run_blas_mp.sh  batch_run_blas_sp.sh  batch_run_hiplaslt.sh  batch_run_rocblas.sh  batch_run_vadd_vmul.sh  batch_run_vfma.sh  batch_run_wmma.sh  run_workload_monitor.sh
runs/scripts/: run_mblas_bf16-bf16-fp32.sh  run_mblas_bf16-fp32-fp32.sh  run_mblas_bf8-fp32-fp32.sh  run_mblas_fp16-fp16-fp16.sh  run_mblas_fp16-fp16-fp32.sh  run_mblas_fp16-fp32-fp32.sh  run_mblas_fp32-fp32-fp32.sh  run_mblas_fp64-fp64-fp64.sh  run_mblas_fp8-fp32-fp32.sh  run_mblas_int8-int32-int32.sh  run_mblas_tf32-fp32-fp32.sh  run_mwmma_bf16-fp32_gpuWide.sh  run_mwmma_bf16-fp32_singleCU.sh  run_mwmma_bf8-fp32_gpuWide.sh  run_mwmma_bf8-fp32_singleCU.sh  run_mwmma_fp16-fp32_gpuWide.sh  run_mwmma_fp16-fp32_singleCU.sh  run_mwmma_fp32-fp32_gpuWide.sh  run_mwmma_fp32-fp32_singleCU.sh  run_mwmma_fp64-fp64_gpuWide.sh  run_mwmma_fp64-fp64_singleCU.sh  run_mwmma_fp8-fp32_gpuWide.sh  run_mwmma_fp8-fp32_singleCU.sh  run_mwmma_int8-int32_gpuWide.sh  run_mwmma_int8-int32_singleCU.sh  run_mwmma_tf32-fp32_gpuWide.sh  run_mwmma_tf32-fp32_singleCU.sh  run_vadd1_fp16_gpuWide.sh  run_vadd1_fp16_singleCU.sh  run_vadd1_fp32_gpuWide.sh  run_vadd1_fp32_singleCU.sh  run_vadd1_fp64_gpuWide.sh  run_vadd1_fp64_singleCU.sh  run_vadd2_fp16_gpuWide.sh  run_vadd2_fp16_singleCU.sh  run_vadd2_fp32_gpuWide.sh  run_vadd2_fp32_singleCU.sh  run_vadd2_fp64_gpuWide.sh  run_vadd2_fp64_singleCU.sh  run_vadd_fp16_gpuWide.sh  (+39 more)
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt
src/kernel/rocm/: add.hip
src/launcher/: CMakeLists.txt
src/launcher/rocm/: benchmark_launcher.hip  hipblaslt_launch.hip  kernel_device_init.hip  kernel_launch.hip  kernel_launch_vector.hip  kernel_launch_wmma.hip  rocblas_launch.hip
src/utils/: CMakeLists.txt
src/utils/common/: metrics.cpp
